<resources>
    <string name="app_name">Brewtopia</string>
    <string name="desc_img_splash_first">Background First Splash</string>
    <string name="headline_splash_first">FIND OUT</string>
    <string name="title_splash_first">ABOUT COFFEE BEANS</string>
    <string name="desc_splash_first">The ultimate refreshing drink to enjoy in every festival.</string>
    <string name="desc_img_splash_middle">Background Middle Splash</string>
    <string name="headline_splash_middle">CHOOSE</string>
    <string name="title_splash_middle">THE BEST COFFEE BEANS</string>
    <string name="desc_splash_middle">Never underestimate the power of a good cup of coffee.</string>
    <string name="desc_img_splash_last">Background Last Splash</string>
    <string name="headline_splash_last">TO MAKE</string>
    <string name="title_splash_last">SPECIAL COFFEE</string>
    <string name="desc_splash_last">I’m fueled by happy thoughts  and coffee.</string>
    <string name="menu_home_value">Home</string>
    <string name="menu_favorite_value">Favorite</string>
    <string name="menu_chat_value">Chat</string>
    <string name="menu_scan_value">Scan</string>
    <string name="desc_icon_menu">Icon Menu</string>
    <string name="desc_icon_search">Icon Search</string>
    <string name="desc_image_brewtopia_coffee">Brewtopia Coffee Image</string>
    <string name="today">Today</string>
    <string name="recommendation">Recommendation</string>
    <string name="greeting">Hi Buddy!</string>
    <string name="get_it_now">Get It Now</string>
    <string name="sorry">Sorry, this page is currently under development.</string>
    <string name="page">Name of Page</string>
    <string name="about">About</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="identify">Identify</string>
    <string name="flash">Flash</string>
    <string name="choose_pic">Choose a picture</string>
    <string name="no_permission">No permission granted.</string>
    <string name="input_chat">Type a message ...</string>
    <string name="desc_send_icon">Send Icon</string>
    <string name="chatbot">ChatBot</string>
    <string name="coffee_scan">Coffee Scan</string>
    <string name="desc_border">Border for Image Upload</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="hint_pass">minimum 8 characters</string>
    <string name="hint_email">user@email.com</string>
    <string name="hint_name">write your name here…</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="invalid_password">Password minimum 8 characters</string>
    <string name="invalid_email">Use valid email format</string>
    <string name="login_success">You are now logged in!</string>
    <string name="login_failed">Login failed!</string>
    <string name="failed_connection">Connection Failure</string>
    <string name="empty_name">Name cannot be empty</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="empty_pass">Password cannot be empty</string>
    <string name="logout">Logout</string>
    <string name="logout_confirm">Do you really want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="logged_out">Logged out</string>
    <string name="here_profile">Here are our profiles!</string>
    <string name="copyright">©Brewtopia_bangkit_2023</string>
    <string name="about_desc">Brewtopia is an application that we created to help entrepreneurs as well as coffee connoisseurs to know how to process the best quality coffee.</string>
    <string name="desc_camera">In BrewTopia, you can check your own coffee beans quality by taking picture via camera or choose your picture via gallery.</string>
    <string name="tips">Tips</string>
    <string name="num_one">1</string>
    <string name="tips_first">Take a picture of the coffee beans from above.</string>
    <string name="num_two">2</string>
    <string name="tips_second">Use good lighting, try not to blur.</string>
    <string name="num_three">3</string>
    <string name="tips_third">Pay attention to the composition of your photos.</string>
    <string name="desc_upload_camera">Camera Icon to Upload</string>
    <string-array name="article_title">
        <item>5 Jenis Kopi di Indonesia</item>
        <item>Cara Mengolah Biji Kopi Robusta</item>
        <item>Cara Mengolah Biji Kopi Arabika Hingga Menjadi Bubuk Kopi</item>
        <item>5 Perlengkapan Kopi dan Fungsinya</item>
        <item>5 Jenis Alat Pembuat Kopi dan Kegunaannya</item>
        <item>3 Coffee Roaster Terbaik - Ditinjau oleh Coffee Consultant (Tahun 2023)</item>
        <item>Pilihan Snack yang Cocok untuk Jadi Teman Minum Kopi</item>
        <item>5 Daerah Penghasil Biji Kopi Terbaik di Indonesia</item>
    </string-array>
    <string-array name="authors">
        <item>ChatGPT</item>
        <item>Imanuel Vicky</item>
        <item>Mikael Rizki</item>
        <item>Nadya Mumtazah</item>
        <item>Aldi Akbar</item>
        <item>Umar Hakim</item>
        <item>Christina Andrea</item>
        <item>Imanuel Vicky</item>
    </string-array>
</resources>