<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:gravity="center|top"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/logo_brewtopia" />

            <TextView
                android:id="@+id/tv_brewtopia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_about_brewtopia"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/about_desc"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_profile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-85dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="-40dp"
                android:background="@drawable/bg_rv_profiles"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="20dp"
                android:text="@string/here_profile"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_developer"
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_rv_profiles"
                android:paddingHorizontal="5dp"
                android:paddingTop="7dp"
                android:paddingBottom="5dp"
                android:scrollbars="vertical"
                tools:listitem="@layout/item_dev" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/iv_copyright_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/copyright"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>